<resources>
    <string name="app_name">SmartBudget</string>
    <string name="title_expenses">Expenses</string>
    <string name="title_budget">Budget</string>
    <string name="title_transactions">Transactions</string>
    <string name="title_alerts">Alerts</string>
    <string name="title_profile">My Profile</string>
	
    <string-array name="years">
        <item>Current Year</item>
        <item>Last Year</item>
    </string-array>

    <string-array name="categories">
        <item>Entertainment</item>
        <item>Travel</item>
        <item>Groceries</item>
        <item>Dining</item>
        <item>Personal</item>
        <item>Shopping</item>
    </string-array>
</resources>
